블로그 제목이랑 부제목 수정

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-title: John Doe
-bio: A Person who travels the world eating noodles
+title: Hwang Yoon Jae
+bio: It is better to fail in originality than to succeed in imitation.
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: It is better to fail in originality than to succeed in imitation.
 
 # if it's an external image, update below for true
 # better with square images
