--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,8 @@ email: myemail@gmail.com
 
 authors:
   johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+    name: Hwang Yoon Jae
+    bio: It is better to fail in originality than to succeed in imitation.
     external-image: false
     picture: assets/images/profile.jpg
     twitter: johndoe
