깃허브 링크 path 추가하여 내 깃허브로 바로 접속할 수 있도록 수정 적용

--- a/_config.yml
+++ b/_config.yml
@@ -34,12 +34,12 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-instagram: myinstagram
-linkedin: mylinkedin
-github: mygithub
-email: myemail@gmail.com
+# facebook: myfacebook
+# twitter: mytwitter
+# instagram: myinstagram
+# linkedin: mylinkedin
+github: hwangyoonjae
+email: hyj90632@gmail.com
 
 authors:
   johndoe:
