--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: It is better to fail in originality than to succeed in imitation.
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/mini_profile.png
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
@@ -51,14 +51,12 @@ authors:
     name: Hwang Yoon Jae
     bio: It is better to fail in originality than to succeed in imitation.
     external-image: false
-    picture: assets/images/profile.jpg
-    twitter: johndoe
+    picture: assets/images/mini_profile.png
   hwangyoonjae:
     name: Hwang YoonJae
     bio: Think positive about everything.
     external-image: false
     picture: assets/images/mini_profile.png
-    twitter: Hwang YoonJae
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
