--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ pagination:
 
 # if you don't need projects, comment the *projects* configs below
 projects: true
+categories: true
 
 # if you don't need "about" or "blog", comment them out below
 about: true
