--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "나만의 기술 블로그"
+title                    : "🔥나만의 기술 블로그🔥"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Hwang Yoon Jae"
@@ -105,7 +105,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Hwang Yoon Jae"
+  name             : "Hwang YoonJae👨🏼‍💻"
   avatar           : "/assets/images/profile.jpg"
   bio              : "Success doesn't come overnight"
   location         : "Republic of Korea"
