--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "HwangYoonJae👨🏼‍💻"
+  name             : "Hwang Yoon Jae"
   avatar           : "/assets/images/profile.jpg"
   bio              : "Success doesn't come overnight"
   location         : "Republic of Korea"
