블로그 about 페이지 만들기위해 세팅 완료

--- a/_config.yml
+++ b/_config.yml
@@ -226,6 +226,9 @@ whitelist:
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
 #  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path>/my-awesome-category/index.html ~> path: /
+about_archive:
+  type: liquid
+  path: /about/
 category_archive:
   type: liquid
   path: /categories/
