--- a/_config.yml
+++ b/_config.yml
@@ -207,6 +207,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-include-cache
+  - jekyll-last-modified-at
 
 # mimic GitHub Pages with --safe
 whitelist:
@@ -259,6 +260,10 @@ compress_html:
   ignore:
     envs: development
 
+collections:
+  notes:
+    output: true
+    permalink: /:slug
 
 # Defaults
 defaults:
