--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Asia/Seoul
 # ↓ --------------------------
 
 title: 🔥나만의 기술 블로그🔥 # the main title
-name: H.Y.J
+name: Cloud Engineer
 
 tagline: 끊임없이 배운걸 기록하자! # it will display as the subtitle
 
