--- a/.github/workflows/backup/ci.yml
+++ b/.github/workflows/backup/ci.yml
@@ -1,33 +1,26 @@
-name: CI
-
+name: "CI"
 on:
   push:
-    branches:
-      - master
-      - "hotfix/*"
+    branches-ignore:
+      - "production"
+      - "docs"
     paths-ignore:
       - ".github/**"
       - "!.github/workflows/ci.yml"
-      - .gitignore
-      - "docs/**"
-      - README.md
-      - LICENSE
+      - ".gitignore"
+      - "README.md"
+      - "LICENSE"
   pull_request:
-    paths-ignore:
-      - ".github/**"
-      - "!.github/workflows/ci.yml"
-      - .gitignore
-      - "docs/**"
-      - README.md
-      - LICENSE
+    paths:
+      - "**"
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
-        ruby: ["3.1", "3.2", "3.3"]
+        ruby: [2.7, 3]
 
     steps:
       - name: Checkout
@@ -43,11 +36,9 @@ jobs:
 
       - name: Setup Node
         uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
 
       - name: Build Assets
         run: npm i && npm run build
 
       - name: Test Site
-        run: bash tools/test.sh
+        run: bash tools/test
