--- a/.github/workflows/backup/codeql.yml
+++ b/.github/workflows/backup/codeql.yml
@@ -2,15 +2,16 @@ name: "CodeQL"
 
 on:
   push:
-    branches: ["master"]
-    paths: ["_javascript/**/*.js"]
+    paths: ["**.js"]
   pull_request:
-    paths: ["_javascript/**/*.js"]
+    paths: ["**.js"]
+  schedule:
+    - cron: "0 0 * * 5"
 
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       actions: read
       contents: read
@@ -28,17 +29,16 @@ jobs:
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v2
         with:
           languages: "${{ matrix.language }}"
-          config-file: .github/codeql/codeql-config.yml
 
       # Autobuild attempts to build any compiled languages  (C/C++, C#, Go, or Java).
       # If this step fails, then you should remove it and run the build manually (see below)
       - name: Autobuild
-        uses: github/codeql-action/autobuild@v3
+        uses: github/codeql-action/autobuild@v2
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v2
         with:
           category: "/language:${{ matrix.language }}"
