--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ timezone: Asia/Seoul
 # ↓ --------------------------
 
 title: 🔥나만의 기술 블로그🔥 # the main title
-name: Hwang YoonJae
+name: Tech Blog
 
-tagline: Cloud & Devops Tech Blog # it will display as the subtitle
+tagline: Cloud & Devops # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
