--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 🔥나만의 기술 블로그🔥 # the main title
+title: 🔥H.Y.J Tech Blog🔥 # the main title
 name: Tech Blog
 
 tagline: Cloud & Devops # it will display as the subtitle
